ADD game_session_player
