# docs/swagger.yaml
@@ -207,10 +207,30 @@ definitions:
       range_to:
         type: integer
     type: object
+  game_session_players.AddPlayerRequest:
+    properties:
+      character_id:
+        type: string
+      game_session_id:
+        type: string
+      nickname:
+        type: string
+    type: object
+  game_session_players.RemovePlayerRequest:
+    properties:
+      game_session_id:
+        type: string
+      nickname:
+        type: string
+    type: object
   game_sessions.CreateRequest:
     properties:
       character_id:
         type: string
+      game_session_name:
+        type: string
+      max_players:
+        type: integer
       nickname:
         type: string
     type: object
@@ -242,14 +262,14 @@ definitions:
     type: object
   models.Backpack:
     properties:
-      game_session_id:
-        type: string
       id:
         type: string
       item_id:
         type: string
       item_type:
         $ref: '#/definitions/models.ItemType'
+      player_id:
+        type: string
     type: object
   models.Character:
     properties:
@@ -332,9 +352,9 @@ definitions:
     properties:
       combo_card:
         type: string
-      game_session_id:
-        type: string
       id:
+        type: string
+      player_id:
         type: string
     type: object
   models.Enemy:
@@ -388,30 +408,18 @@ definitions:
     type: object
   models.GameSession:
     properties:
-      backpack:
-        items:
-          $ref: '#/definitions/models.Backpack'
-        type: array
-      character_id:
-        type: string
-      deck:
-        items:
-          $ref: '#/definitions/models.Deck'
-        type: array
-      equipped_weapon_id:
-        type: string
-      experience:
-        type: integer
       finish_game_date:
         type: string
-      health:
-        type: integer
       id:
         type: string
-      level:
+      max_players:
         type: integer
-      nickname:
+      name:
         type: string
+      players:
+        items:
+          $ref: '#/definitions/models.Player'
+        type: array
       start_game_date:
         type: string
     type: object
@@ -434,6 +442,33 @@ definitions:
       monsters_count:
         type: integer
       name:
+        type: string
+    type: object
+  models.Player:
+    properties:
+      backpack:
+        items:
+          $ref: '#/definitions/models.Backpack'
+        type: array
+      character_id:
+        type: string
+      deck:
+        items:
+          $ref: '#/definitions/models.Deck'
+        type: array
+      equipped_weapon_id:
+        type: string
+      experience;:
+        type: integer
+      game_session_id:
+        type: string
+      health:
+        type: integer
+      id:
+        type: string
+      level:
+        type: integer
+      nickname:
         type: string
     type: object
   models.SpecialEffect:
@@ -593,6 +628,26 @@ info:
   title: Table Top API
   version: "1.0"
 paths:
+  /add_player:
+    post:
+      consumes:
+      - application/json
+      description: Add player to game session
+      parameters:
+      - description: GameSession
+        in: body
+        name: gameSession
+        required: true
+        schema:
+          $ref: '#/definitions/game_session_players.AddPlayerRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+      summary: Add player to game session
+      tags:
+      - GameSessionsPlayers
   /characters:
     get:
       description: List all characters
@@ -783,6 +838,28 @@ paths:
       summary: Update a combo card
       tags:
       - ComboCards
+  /create_game:
+    post:
+      consumes:
+      - application/json
+      description: Create a new game session
+      parameters:
+      - description: GameSession
+        in: body
+        name: gameSession
+        required: true
+        schema:
+          $ref: '#/definitions/game_sessions.CreateRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.GameSession'
+      summary: Create a new game session
+      tags:
+      - GameSessions
   /damage_combo_cards:
     get:
       description: List all damage combo cards
@@ -1079,6 +1156,19 @@ paths:
       summary: Update an existing enemy move
       tags:
       - EnemyMoves
+  /finish_game:
+    post:
+      consumes:
+      - application/json
+      description: Finish game session
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+      summary: Finish game session
+      tags:
+      - GameSessions
   /game_session:
     get:
       consumes:
@@ -1092,6 +1182,36 @@ paths:
           schema:
             $ref: '#/definitions/models.GameSession'
       summary: Get game session
+      tags:
+      - GameSessions
+  /list_game_sessions:
+    get:
+      consumes:
+      - application/json
+      description: List game sessions
+      parameters:
+      - description: Name
+        in: query
+        name: name
+        type: string
+      - description: Page
+        in: query
+        name: page
+        type: integer
+      - description: Limit
+        in: query
+        name: limit
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.GameSession'
+            type: array
+      summary: List game sessions
       tags:
       - GameSessions
   /locations:
@@ -1189,6 +1309,26 @@ paths:
       summary: Update a location
       tags:
       - Locations
+  /remove_player:
+    post:
+      consumes:
+      - application/json
+      description: Remove player from game session
+      parameters:
+      - description: GameSession
+        in: body
+        name: gameSession
+        required: true
+        schema:
+          $ref: '#/definitions/game_session_players.RemovePlayerRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+      summary: Remove player from game session
+      tags:
+      - GameSessionsPlayers
   /special_effects:
     get:
       description: List all special effects
@@ -1289,20 +1429,11 @@ paths:
       consumes:
       - application/json
       description: Start a new game session
-      parameters:
-      - description: GameSession
-        in: body
-        name: gameSession
-        required: true
-        schema:
-          $ref: '#/definitions/game_sessions.CreateRequest'
       produces:
       - application/json
       responses:
         "200":
           description: OK
-          schema:
-            $ref: '#/definitions/models.GameSession'
       summary: Start a new game session
       tags:
       - GameSessions
