# internal/dtos/requests/game_session_players/remove_player_request.go
@@ -1,0 +1,8 @@
+package game_session_players
+
+import "github.com/google/uuid"
+
+type RemovePlayerRequest struct {
+	GameSessionID *uuid.UUID `json:"game_session_id,omitempty"`
+	Nickname      string     `json:"nickname"`
+}
